Added bindings in IDE page for syntax error tooltip

--- a/src/Brainf_ckSharp.Uwp.Controls.Ide/Brainf_ckIde/Brainf_ckIde.xaml
+++ b/src/Brainf_ckSharp.Uwp.Controls.Ide/Brainf_ckIde/Brainf_ckIde.xaml
@@ -91,6 +91,8 @@
             attachedProperties:ClipHelper.ClipToBounds="True"
             Padding="4,76,8,8"
             VerticalScrollBarMargin="0,68,0,0"
+            SyntaxErrorToolTipTitle="{x:Bind SyntaxErrorToolTipTitle, Mode=OneWay}"
+            SyntaxErrorToolTipSubtitle="{x:Bind SyntaxErrorToolTipSubtitle, Mode=OneWay}"
             SyntaxHighlightTheme="{x:Bind SyntaxHighlightTheme, Mode=OneWay}"
             TextChanged="CodeEditBox_TextChanged"
             CursorPositionChanged="CodeEditBox_CursorPositionChanged"/>
