Fixed UI update glitch when editing text in breakpoints

--- a/src/Brainf_ckSharp.Uwp.Controls.Ide/Brainf_ckIde/Brainf_ckIde.xaml
+++ b/src/Brainf_ckSharp.Uwp.Controls.Ide/Brainf_ckIde/Brainf_ckIde.xaml
@@ -108,7 +108,7 @@
             SyntaxErrorToolTipTitle="{x:Bind SyntaxErrorToolTipTitle, Mode=OneWay}"
             SyntaxErrorToolTipSubtitle="{x:Bind SyntaxErrorToolTipSubtitle, Mode=OneWay}"
             SyntaxHighlightTheme="{x:Bind SyntaxHighlightTheme, Mode=OneWay}"
-            TextChanging="CodeEditBox_OnTextChanging"
+            FormattingCompleted="CodeEditBox_OnFormattingCompleted"
             TextChanged="CodeEditBox_TextChanged"
             DrawOverlays="CodeEditBox_OnDrawOverlays"
             CursorPositionChanged="CodeEditBox_CursorPositionChanged"/>
