--- a/src/Brainf_ckSharp.Uwp/Resources/Dictionaries/Brushes.xaml
+++ b/src/Brainf_ckSharp.Uwp/Resources/Dictionaries/Brushes.xaml
@@ -1,10 +1,10 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:brushes="using:UICompositionAnimations.Brushes">
+    xmlns:media="using:Microsoft.Toolkit.Uwp.UI.Media">
 
     <!--Shell header background brush-->
-    <brushes:AcrylicBrush
+    <media:AcrylicBrush
         x:Key="ShellHeaderBackgroundBrush"
         Source="Backdrop"
         BlurAmount="8"
@@ -13,7 +13,7 @@
         TextureUri="/Assets/Misc/noise_low.png"/>
 
     <!--Virtual keyboard brush-->
-    <brushes:AcrylicBrush
+    <media:AcrylicBrush
         x:Key="VirtualKeyboardBackgroundBrush"
         Source="HostBackdrop"
         FallbackColor="#FF141414"
@@ -22,7 +22,7 @@
         TextureUri="/Assets/Misc/noise_low.png"/>
 
     <!--Sub page brushes-->
-    <brushes:AcrylicBrush
+    <media:AcrylicBrush
         x:Key="SubFrameHostBackgroundBrush"
         Source="Backdrop"
         FallbackColor="#C0080808"
