Added analytics to breakpoint actions

--- a/src/Brainf_ckSharp.Uwp/Views/IdeView.xaml
+++ b/src/Brainf_ckSharp.Uwp/Views/IdeView.xaml
@@ -70,7 +70,10 @@
         SyntaxErrorToolTipTitle="Syntax error"
         SyntaxErrorToolTipSubtitle="{x:Bind convertersConsole:SyntaxErrorConverter.Convert(ViewModel.ValidationResult.ErrorType), Mode=OneWay}"
         TextChanged="CodeEditor_OnTextChanged"
-        CursorPositionChanged="CodeEditor_OnCursorPositionChanged">
+        CursorPositionChanged="CodeEditor_OnCursorPositionChanged"
+        BreakpointAdded="CodeEditor_OnBreakpointAdded"
+        BreakpointRemoved="CodeEditor_OnBreakpointRemoved"
+        BreakpointsCleared="CodeEditor_OnBreakpointsCleared">
         <ide:Brainf_ckIde.ContextMenuSecondaryContent>
             <ItemsControl
                 ItemsSource="{x:Bind constants:CodeSnippets.All}"
