Removed unnecessary UI code

--- a/src/Brainf_ckSharp.Uwp/Controls/Host/Shell.xaml
+++ b/src/Brainf_ckSharp.Uwp/Controls/Host/Shell.xaml
@@ -4,346 +4,13 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    xmlns:markupExtensions="using:Brainf_ckSharp.Uwp.MarkupExtensions"
-    xmlns:toolkitExtensions="using:Microsoft.Toolkit.Uwp.UI.Extensions"
-    xmlns:controls="using:Brainf_ckSharp.Uwp.Controls.Windows.UI.Xaml.Controls"
     xmlns:views="using:Brainf_ckSharp.Uwp.Views"
-    xmlns:shellHeader="using:Brainf_ckSharp.Uwp.Controls.Host.Header"
-    xmlns:inputPanel="using:Brainf_ckSharp.Uwp.Controls.Host.InputPanel"
-    xmlns:host="using:Brainf_ckSharp.Uwp.Controls.SubPages.Host"
-    xmlns:attachedProperties="using:Brainf_ckSharp.Uwp.AttachedProperties"
-    xmlns:converters="using:Brainf_ckSharp.Uwp.Converters"
-    xmlns:viewModels="using:Brainf_ckSharp.Shared.ViewModels"
-    xmlns:local="using:Brainf_ckSharp.Uwp.Controls.Host"
-    xmlns:settings="using:Brainf_ckSharp.Shared.Enums.Settings"
     mc:Ignorable="d"
     d:DesignHeight="600"
     d:DesignWidth="400">
-    <UserControl.DataContext>
-        <viewModels:ShellViewModel
-            x:Name="ViewModel"
-            UserGuideRequested="ViewModel_OnUserGuideRequested"
-            UnicodeMapRequested="ViewModel_OnUnicodeMapRequested"
-            SettingsRequested="ViewModel_OnSettingsRequested"
-            AboutInfoRequested="ViewModel_OnAboutInfoRequested"
-            CodeLibraryRequested="ViewModel_OnCodeLibraryRequested"/>
-    </UserControl.DataContext>
-    <UserControl.Resources>
-
-        <!--Converter for the two way binding. This is needed because x:Bind
-            doesn't support static functions being used for two way binding yet.
-            Not using a converter results in the convert back value being discarded.-->
-        <converters:PivotSelectionConverter x:Key="PivotSelectionConverter"/>
-    </UserControl.Resources>
 
     <!--Main app UI-->
     <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="68"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="24"/>
-        </Grid.RowDefinitions>
-
-        <!--Console and IDE-->
-        <Pivot
-            Grid.Row="0"
-            Grid.RowSpan="2"
-            Style="{StaticResource ExpandedPivotWithNoHeaderStyle}"
-            SelectedIndex="{x:Bind converters:PivotSelectionConverter.ConvertToIndex(ViewModel.SelectedView), Mode=OneWay}">
-            <PivotItem>
-                <views:ConsoleView attachedProperties:ViewModelBaseHelper.IsActive="{x:Bind ViewModel.SelectedView.Equals(settings:ViewType.Console), Mode=OneWay}"/>
-            </PivotItem>
-            <PivotItem>
-                <views:IdeView attachedProperties:ViewModelBaseHelper.IsActive="{x:Bind ViewModel.SelectedView.Equals(settings:ViewType.Ide), Mode=OneWay}"/>
-            </PivotItem>
-        </Pivot>
-
-        <!--Header drop shadow-->
-        <Rectangle
-            Grid.Row="1"
-            VerticalAlignment="Top"
-            IsHitTestVisible="False"
-            Height="8">
-            <Rectangle.Fill>
-                <LinearGradientBrush EndPoint="0,0" StartPoint="0,1">
-                    <GradientStop Color="#60000000" Offset="1"/>
-                    <GradientStop Offset="0"/>
-                </LinearGradientBrush>
-            </Rectangle.Fill>
-        </Rectangle>
-
-        <!--Header panel-->
-        <shellHeader:HeaderPanel
-            Grid.Row="0"
-            SelectedIndex="{x:Bind ViewModel.SelectedView, Converter={StaticResource PivotSelectionConverter}, Mode=TwoWay}"/>
-
-        <!--Expandable keyboard area-->
-        <Border
-            Grid.Row="2"
-            BorderThickness="0,1,0,0"
-            BorderBrush="#FF323232"
-            Background="{StaticResource VirtualKeyboardBackgroundBrush}">
-            <controls:ExpanderControl
-                HeaderHeight="48"
-                ExpandableContentHeight="180"
-                IsExpanded="{x:Bind ViewModel.IsVirtualKeyboardEnabled, Mode=TwoWay}">
-                <controls:ExpanderControl.Header>
-                    <inputPanel:StdinHeader
-                        x:Name="StdinHeader"
-                        ShellSelectedIndex="{x:Bind converters:PivotSelectionConverter.ConvertToIndex(ViewModel.SelectedView), Mode=OneWay}"/>
-                </controls:ExpanderControl.Header>
-                <controls:ExpanderControl.ExpandableContent>
-                    <controls:LockedPivot
-                        Style="{StaticResource ExpandedPivotWithNoHeaderStyle}"
-                        SelectedIndex="{x:Bind StdinHeader.StdinSelectedIndex, Mode=OneWay, FallbackValue=0}"
-                        SelectionChanged="Pivot_OnSelectionChanged">
-                        <PivotItem>
-                            <inputPanel:VirtualKeyboard/>
-                        </PivotItem>
-                        <PivotItem>
-                            <inputPanel:CompactMemoryViewer/>
-                        </PivotItem>
-                    </controls:LockedPivot>
-                </controls:ExpanderControl.ExpandableContent>
-            </controls:ExpanderControl>
-        </Border>
-
-        <!--Command bar-->
-        <controls:AnimatedCommandBar
-            Grid.Row="3"
-            IsDynamicOverflowEnabled="False"
-            Style="{StaticResource CommandBarRevealStyle}"
-            IsPrimaryContentDisplayed="{x:Bind ViewModel.SelectedView.Equals(settings:ViewType.Console), Mode=OneWay}">
-            <controls:AnimatedCommandBar.PrimaryCommands>
-
-                <!--Console buttons-->
-                <AppBarButton
-                    Label="Run"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource RunIcon}}"
-                    Tag="{markupExtensions:Boolean Value=True}"
-                    Foreground="{StaticResource RunBrush}"
-                    Click="{x:Bind ViewModel.RunConsoleScript}">
-                    <AppBarButton.Resources>
-                        <SolidColorBrush x:Key="AppBarButtonForegroundPointerOver" Color="{StaticResource RunColor}"/>
-                        <SolidColorBrush x:Key="AppBarButtonForegroundPressed" Color="{StaticResource RunColor}"/>
-                    </AppBarButton.Resources>
-                    <AppBarButton.KeyboardAccelerators>
-                        <KeyboardAccelerator Key="F5"/>
-                    </AppBarButton.KeyboardAccelerators>
-                </AppBarButton>
-                <AppBarButton
-                    Label="Delete"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource DeleteKeyIcon}}"
-                    Tag="{markupExtensions:Boolean Value=True}"
-                    Click="{x:Bind ViewModel.DeleteConsoleOperator}">
-                    <AppBarButton.KeyboardAccelerators>
-                        <KeyboardAccelerator Key="Back"/>
-                    </AppBarButton.KeyboardAccelerators>
-                </AppBarButton>
-                <AppBarButton
-                    Label="Clear"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource ClearIcon}}"
-                    Tag="{markupExtensions:Boolean Value=True}"
-                    Click="{x:Bind ViewModel.ClearConsoleCommand}">
-                    <AppBarButton.KeyboardAccelerators>
-                        <KeyboardAccelerator Key="Delete" Modifiers="Control"/>
-                    </AppBarButton.KeyboardAccelerators>
-                </AppBarButton>
-
-                <!--IDE buttons-->
-                <AppBarButton
-                    Label="Run"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource RunIcon}}"
-                    Tag="{markupExtensions:Boolean Value=False}"
-                    Foreground="{StaticResource RunBrush}"
-                    Click="{x:Bind ViewModel.RunIdeScript}">
-                    <AppBarButton.Resources>
-                        <SolidColorBrush x:Key="AppBarButtonForegroundPointerOver" Color="{StaticResource RunColor}"/>
-                        <SolidColorBrush x:Key="AppBarButtonForegroundPressed" Color="{StaticResource RunColor}"/>
-                    </AppBarButton.Resources>
-                </AppBarButton>
-                <AppBarButton
-                    Label="Debug"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource DebugIcon}}"
-                    Tag="{markupExtensions:Boolean Value=False}"
-                    Foreground="{StaticResource DebugBrush}"
-                    Click="{x:Bind ViewModel.DebugIdeScript}">
-                    <AppBarButton.Resources>
-                        <SolidColorBrush x:Key="AppBarButtonForegroundPointerOver" Color="{StaticResource DebugColor}"/>
-                        <SolidColorBrush x:Key="AppBarButtonForegroundPressed" Color="{StaticResource DebugColor}"/>
-                    </AppBarButton.Resources>
-                </AppBarButton>
-                <AppBarSeparator Tag="{markupExtensions:Boolean Value=False}"/>
-                <AppBarButton
-                    Label="Move"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource MoveIcon}}"
-                    Tag="{markupExtensions:Boolean Value=False}">
-                    <AppBarButton.Flyout>
-                        <CommandBarFlyout>
-                            <AppBarButton
-                                Label="Up"
-                                ToolTipService.ToolTip="Up"
-                                Icon="{toolkitExtensions:FontIcon Glyph={StaticResource UpIcon}}"
-                                Command="{x:Bind MoveCommand}"
-                                CommandParameter="{markupExtensions:VirtualKey Value=Up}"/>
-                            <AppBarButton
-                                Label="Down"
-                                ToolTipService.ToolTip="Down"
-                                Icon="{toolkitExtensions:FontIcon Glyph={StaticResource DownIcon}}"
-                                Command="{x:Bind MoveCommand}"
-                                CommandParameter="{markupExtensions:VirtualKey Value=Down}"/>
-                            <AppBarButton
-                                Label="Left"
-                                ToolTipService.ToolTip="Left"
-                                Icon="{toolkitExtensions:FontIcon Glyph={StaticResource LeftIcon}}"
-                                Command="{x:Bind MoveCommand}"
-                                CommandParameter="{markupExtensions:VirtualKey Value=Left}"/>
-                            <AppBarButton
-                                Label="Right"
-                                ToolTipService.ToolTip="Right"
-                                Icon="{toolkitExtensions:FontIcon Glyph={StaticResource RightIcon}}"
-                                Command="{x:Bind MoveCommand}"
-                                CommandParameter="{markupExtensions:VirtualKey Value=Right}"/>
-                        </CommandBarFlyout>
-                    </AppBarButton.Flyout>
-                </AppBarButton>
-                <AppBarButton
-                    Label="New line"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource NewLineIcon}}"
-                    Tag="{markupExtensions:Boolean Value=False}"
-                    Click="{x:Bind ViewModel.InsertNewLine}"/>
-                <AppBarButton
-                    Label="Delete"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource DeleteKeyIcon}}"
-                    Tag="{markupExtensions:Boolean Value=False}"
-                    Click="{x:Bind ViewModel.DeleteIdeCharacter}"/>
-                <AppBarButton
-                    Label="Undo"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource UndoIcon}}"
-                    Tag="{markupExtensions:Boolean Value=False}"/>
-                <AppBarButton
-                    Label="Redo"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource RedoIcon}}"
-                    Tag="{markupExtensions:Boolean Value=False}"/>
-            </controls:AnimatedCommandBar.PrimaryCommands>
-            <controls:AnimatedCommandBar.SecondaryCommands>
-                <AppBarButton
-                    Label="User guide"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource UserGuideIcon}}"
-                    Click="{x:Bind ViewModel.RequestUserGuide}">
-                    <AppBarButton.KeyboardAccelerators>
-                        <KeyboardAccelerator Key="G" Modifiers="Control"/>
-                    </AppBarButton.KeyboardAccelerators>
-                </AppBarButton>
-                <AppBarButton
-                    Label="Unicode characters"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource ShowUnicodeMapIcon}}"
-                    Click="{x:Bind ViewModel.RequestUnicodeMap}">
-                    <AppBarButton.KeyboardAccelerators>
-                        <KeyboardAccelerator Key="U" Modifiers="Control"/>
-                    </AppBarButton.KeyboardAccelerators>
-                </AppBarButton>
-                <AppBarSeparator/>
-                <AppBarButton
-                    Label="Repeat last script"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource RepeatScriptIcon}}"
-                    Click="{x:Bind ViewModel.RepeatLastConsoleScript}"
-                    Visibility="{x:Bind converters:PivotSelectionConverter.ConvertToVisibility(ViewModel.SelectedView, settings:ViewType.Console), Mode=OneWay}">
-                    <AppBarButton.KeyboardAccelerators>
-                        <KeyboardAccelerator
-                            Key="F2" Modifiers="Control"
-                            IsEnabled="{x:Bind ViewModel.SelectedView.Equals(settings:ViewType.Console), Mode=OneWay}"/>
-                    </AppBarButton.KeyboardAccelerators>
-                </AppBarButton>
-                <AppBarButton
-                    Label="Restart"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource RestartIcon}}"
-                    Click="{x:Bind ViewModel.RestartConsole}"
-                    Visibility="{x:Bind converters:PivotSelectionConverter.ConvertToVisibility(ViewModel.SelectedView, settings:ViewType.Console), Mode=OneWay}">
-                    <AppBarButton.KeyboardAccelerators>
-                        <KeyboardAccelerator
-                            Key="F6" Modifiers="Control"
-                            IsEnabled="{x:Bind ViewModel.SelectedView.Equals(settings:ViewType.Console), Mode=OneWay}"/>
-                    </AppBarButton.KeyboardAccelerators>
-                </AppBarButton>
-                <AppBarButton
-                    Label="Clear screen"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource ClearScreen}}"
-                    Click="{x:Bind ViewModel.ClearConsoleScreen}"
-                    Visibility="{x:Bind converters:PivotSelectionConverter.ConvertToVisibility(ViewModel.SelectedView, settings:ViewType.Console), Mode=OneWay}">
-                    <AppBarButton.KeyboardAccelerators>
-                        <KeyboardAccelerator
-                            Key="F4" Modifiers="Control"
-                            IsEnabled="{x:Bind ViewModel.SelectedView.Equals(settings:ViewType.Console), Mode=OneWay}"/>
-                    </AppBarButton.KeyboardAccelerators>
-                </AppBarButton>
-                <AppBarButton
-                    Label="New file"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource NewFileIcon}}"
-                    Visibility="{x:Bind converters:PivotSelectionConverter.ConvertToVisibility(ViewModel.SelectedView, settings:ViewType.Ide), Mode=OneWay}"
-                    Click="{x:Bind ViewModel.NewIdeFile}"/>
-                <AppBarSeparator Visibility="{x:Bind converters:PivotSelectionConverter.ConvertToVisibility(ViewModel.SelectedView, settings:ViewType.Ide), Mode=OneWay}"/>
-                <AppBarButton
-                    Label="Open code library"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource OpenCodeLibraryIcon}}"
-                    Visibility="{x:Bind converters:PivotSelectionConverter.ConvertToVisibility(ViewModel.SelectedView, settings:ViewType.Ide), Mode=OneWay}"
-                    Click="{x:Bind ViewModel.RequestCodeLibrary}"/>
-                <AppBarButton
-                    Label="Open file"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource OpenFileIcon}}"
-                    Visibility="{x:Bind converters:PivotSelectionConverter.ConvertToVisibility(ViewModel.SelectedView, settings:ViewType.Ide), Mode=OneWay}"
-                    Click="{x:Bind ViewModel.OpenFile}"/>
-                <AppBarSeparator Visibility="{x:Bind converters:PivotSelectionConverter.ConvertToVisibility(ViewModel.SelectedView, settings:ViewType.Ide), Mode=OneWay}"/>
-                <AppBarButton
-                    Label="Save"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource SaveIcon}}"
-                    Visibility="{x:Bind converters:PivotSelectionConverter.ConvertToVisibility(ViewModel.SelectedView, settings:ViewType.Ide), Mode=OneWay}"
-                    Click="{x:Bind ViewModel.SaveFile}">
-                    <AppBarButton.KeyboardAccelerators>
-                        <KeyboardAccelerator
-                            Key="S" Modifiers="Control"
-                            IsEnabled="{x:Bind ViewModel.SelectedView.Equals(settings:ViewType.Ide), Mode=OneWay}"/>
-                    </AppBarButton.KeyboardAccelerators>
-                </AppBarButton>
-                <AppBarButton
-                    Label="Save as"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource SaveAsIcon}}"
-                    Visibility="{x:Bind converters:PivotSelectionConverter.ConvertToVisibility(ViewModel.SelectedView, settings:ViewType.Ide), Mode=OneWay}"
-                    Click="{x:Bind ViewModel.SaveFileAs}">
-                    <AppBarButton.KeyboardAccelerators>
-                        <KeyboardAccelerator
-                            Key="S" Modifiers="Menu"
-                            IsEnabled="{x:Bind ViewModel.SelectedView.Equals(settings:ViewType.Ide), Mode=OneWay}"/>
-                    </AppBarButton.KeyboardAccelerators>
-                </AppBarButton>
-                <AppBarSeparator/>
-                <AppBarButton
-                    Label="Settings"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource SettingsIcon}}"
-                    Click="{x:Bind ViewModel.RequestSettings}">
-                    <AppBarButton.KeyboardAccelerators>
-                        <KeyboardAccelerator Key="I" Modifiers="Control"/>
-                    </AppBarButton.KeyboardAccelerators>
-                </AppBarButton>
-                <AppBarButton
-                    Label="About"
-                    Icon="{toolkitExtensions:FontIcon Glyph={StaticResource AboutIcon}}"
-                    Click="{x:Bind ViewModel.RequestAboutInfo}">
-                    <AppBarButton.KeyboardAccelerators>
-                        <KeyboardAccelerator Key="A" Modifiers="Control"/>
-                    </AppBarButton.KeyboardAccelerators>
-                </AppBarButton>
-            </controls:AnimatedCommandBar.SecondaryCommands>
-        </controls:AnimatedCommandBar>
-
-        <!--Status bar-->
-        <local:StatusBar Grid.Row="4"/>
-
-        <!--Sub page host-->
-        <host:SubPageHost
-            Grid.Row="0"
-            Grid.RowSpan="5"/>
+        <views:IdeView/>
     </Grid>
 </UserControl>
