--- a/src/Brainf_ckSharp.Uwp/Styles/ButtonsStyles.xaml
+++ b/src/Brainf_ckSharp.Uwp/Styles/ButtonsStyles.xaml
@@ -1,9 +1,6 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" 
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:hostHeader="using:Brainf_ckSharp.Uwp.Controls.Host.Header"
-    xmlns:inputPanel="using:Brainf_ckSharp.Uwp.Controls.Host.InputPanel"
-    xmlns:winui="using:Microsoft.UI.Xaml.Media">
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
     <!--Custom base style for buttons, expanding the style from WinUI-->
     <Style
@@ -100,167 +97,6 @@
                             BorderThickness="{TemplateBinding BorderThickness}"
                             CornerRadius="{TemplateBinding CornerRadius}"/>
                     </Grid>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
-
-    <!--Header button-->
-    <Style TargetType="hostHeader:HeaderButton">
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="hostHeader:HeaderButton">
-                    <Button x:Name="RootButton" Style="{StaticResource ExpandedSquareButtonRevealStyle}">
-
-                        <!--Visual states-->
-                        <VisualStateManager.VisualStateGroups>
-                            <VisualStateGroup>
-                                <VisualState x:Name="Default">
-                                    <VisualState.Setters>
-                                        <Setter
-                                            Target="IconBlock.Foreground"
-                                            Value="White"/>
-                                        <Setter
-                                            Target="TitleBlock.Foreground"
-                                            Value="White"/>
-                                        <Setter
-                                            Target="RootButton.Background"
-                                            Value="Transparent"/>
-                                    </VisualState.Setters>
-                                </VisualState>
-                                <VisualState x:Name="Selected">
-                                    <VisualState.Setters>
-                                        <Setter
-                                            Target="IconBlock.Foreground"
-                                            Value="{ThemeResource SystemControlHighlightAccentBrush}"/>
-                                        <Setter
-                                            Target="TitleBlock.Foreground"
-                                            Value="{ThemeResource SystemControlHighlightAccentBrush}"/>
-                                        <Setter
-                                            Target="RootButton.Background"
-                                            Value="#40000000"/>
-                                    </VisualState.Setters>
-                                </VisualState>
-                            </VisualStateGroup>
-                        </VisualStateManager.VisualStateGroups>
-
-                        <!--Icon and title-->
-                        <StackPanel
-                            HorizontalAlignment="Center"
-                            VerticalAlignment="Center"
-                            Spacing="4">
-                            <TextBlock
-                                x:Name="IconBlock"
-                                Text="{TemplateBinding Icon}"
-                                FontFamily="Segoe MDL2 Assets"
-                                FontSize="16"
-                                HorizontalAlignment="Center"/>
-                            <TextBlock
-                                x:Name="TitleBlock"
-                                Text="{TemplateBinding Text}"
-                                HorizontalAlignment="Center"
-                                MaxLines="1"
-                                TextWrapping="NoWrap"
-                                TextTrimming="CharacterEllipsis"
-                                FontSize="12"
-                                Foreground="#E0FFFFFF"/>
-                        </StackPanel>
-                    </Button>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
-
-    <!--Minimal header button-->
-    <Style TargetType="inputPanel:MinimalHeaderButton">
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="inputPanel:MinimalHeaderButton">
-                    <Button x:Name="RootButton" Style="{StaticResource ExpandedSquareButtonRevealStyle}">
-                        <Button.Resources>
-                            <SolidColorBrush x:Key="ButtonRevealBackgroundDisabled" Color="#40181818"/>
-                        </Button.Resources>
-
-                        <!--Visual states-->
-                        <VisualStateManager.VisualStateGroups>
-                            <VisualStateGroup>
-                                <VisualState x:Name="Disabled">
-                                    <VisualState.Setters>
-                                        <Setter
-                                            Target="IconBlock.Foreground"
-                                            Value="DarkGray"/>
-                                        <Setter
-                                            Target="RootButton.Background"
-                                            Value="Transparent"/>
-                                    </VisualState.Setters>
-                                </VisualState>
-                                <VisualState x:Name="Default">
-                                    <VisualState.Setters>
-                                        <Setter
-                                            Target="IconBlock.Foreground"
-                                            Value="White"/>
-                                        <Setter
-                                            Target="RootButton.Background"
-                                            Value="Transparent"/>
-                                    </VisualState.Setters>
-                                </VisualState>
-                                <VisualState x:Name="Selected">
-                                    <VisualState.Setters>
-                                        <Setter
-                                            Target="IconBlock.Foreground"
-                                            Value="{ThemeResource SystemControlHighlightAccentBrush}"/>
-                                        <Setter
-                                            Target="RootButton.Background"
-                                            Value="#40000000"/>
-                                    </VisualState.Setters>
-                                </VisualState>
-                            </VisualStateGroup>
-                        </VisualStateManager.VisualStateGroups>
-
-                        <!--Icon-->
-                        <TextBlock
-                            x:Name="IconBlock"
-                            Text="{TemplateBinding Icon}"
-                            FontFamily="Segoe MDL2 Assets"
-                            FontSize="16"
-                            HorizontalAlignment="Center"/>
-                    </Button>
-                </ControlTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
-
-    <!--Operator button-->
-    <Style TargetType="inputPanel:OperatorButton">
-        <Setter Property="Template">
-            <Setter.Value>
-                <ControlTemplate TargetType="inputPanel:OperatorButton">
-                    <Button
-                        Style="{StaticResource ExpandedSquareButtonRevealStyle}"
-                        Background="#32000000"
-                        Command="{TemplateBinding Command}"
-                        CommandParameter="{TemplateBinding Operator}">
-
-                        <!--Icon and title-->
-                        <StackPanel
-                            HorizontalAlignment="Center"
-                            VerticalAlignment="Center"
-                            Spacing="8">
-                            <TextBlock
-                                Text="{Binding Operator, RelativeSource={RelativeSource TemplatedParent}}"
-                                HorizontalAlignment="Center"
-                                FontSize="24"
-                                FontWeight="SemiBold"/>
-                            <TextBlock
-                                Text="{TemplateBinding Description}"
-                                HorizontalAlignment="Center"
-                                MaxLines="1"
-                                TextWrapping="NoWrap"
-                                TextTrimming="CharacterEllipsis"
-                                FontSize="12"
-                                Foreground="#80FFFFFF"/>
-                        </StackPanel>
-                    </Button>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
