--- a/src/Brainf_ckSharp.Uwp.Controls.Ide/Themes/Generic.xaml
+++ b/src/Brainf_ckSharp.Uwp.Controls.Ide/Themes/Generic.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation">
     <ResourceDictionary.MergedDictionaries>
+        <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls"/>
         <ResourceDictionary Source="ms-appx:///Brainf_ckSharp.UWP.Controls.IDE/Brainf_ckEditBox/Brainf_ckEditBox.xaml"/>
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
